<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_12"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/login_show_text"
            android:textColor="@color/common_text_color"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@drawable/input_bg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:src="@mipmap/user_login_icon"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_48"
            android:background="@null"
            android:hint="@string/hint_user_name_text"
            android:textColor="@color/black1"
            android:textColorHint="@color/common_text_color"
            android:textSize="@dimen/sp_14"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_12"
        android:background="@drawable/input_bg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:src="@mipmap/user_password_icon"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_48"
            android:background="@null"
            android:hint="@string/hint_password_text"
            android:textColor="@color/black1"
            android:textColorHint="@color/common_text_color"
            android:textSize="@dimen/sp_14"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_24">

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/common_btn_bg"
            android:text="@string/login_text"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_24">

        <TextView
            android:id="@+id/to_register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/dp_6"
            android:text="@string/register_text"
            android:textColor="@color/register_bg_color"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_6"
            android:text="@string/forget_password_text"
            android:textColor="@color/common_text_color"
            android:textSize="14sp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_48"
        android:gravity="center">

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginRight="15sp"
            android:layout_weight="1"
            android:background="@color/line_color"></View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quick_login_text"
            android:textColor="@color/common_text_color"
            android:textSize="@dimen/sp_16"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginLeft="15sp"
            android:layout_weight="1"
            android:background="@color/line_color"></View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_12"
        android:gravity="center">

        <ImageView
            android:id="@+id/qq_auth_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/qq_login_icon"/>

        <ImageView
            android:id="@+id/weixin_auth_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:src="@mipmap/weixin_login_icon"/>
    </LinearLayout>
</LinearLayout>
