<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@drawable/input_bg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:src="@mipmap/user_login_icon"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_48"
            android:background="@null"
            android:hint="@string/hint_user_name_text"
            android:textColor="@color/black1"
            android:textColorHint="@color/common_text_color"
            android:textSize="@dimen/sp_14"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_12"
        android:background="@drawable/input_bg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:src="@mipmap/user_password_icon"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_48"
            android:background="@null"
            android:hint="@string/hint_password_text"
            android:textColor="@color/black1"
            android:textColorHint="@color/common_text_color"
            android:textSize="@dimen/sp_14"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_12"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_gravity="center_vertical"

            android:layout_weight="1"
            android:background="@drawable/input_bg">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginRight="@dimen/dp_12"
                android:src="@mipmap/user_password_icon"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_48"
                android:background="@null"
                android:hint="@string/hint_validate_code_text"
                android:textColor="@color/black1"
                android:textColorHint="@color/common_text_color"
                android:textSize="@dimen/sp_14"/>
        </FrameLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/dp_12"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:background="@drawable/register_btn_bg"
            android:text="获取验证码"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_24">

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/common_btn_bg"
            android:text="@string/register_text"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>
