<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dp_6"
    android:layout_marginRight="@dimen/dp_6"
    android:layout_marginTop="@dimen/dp_6"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8">

        <ImageView
            android:id="@+id/movie_iv"
            android:layout_width="80dp"
            android:layout_height="114dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/movie_default1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@+id/movie_iv"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/movie_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@+id/movie_iv"
                    android:text="金刚·骷髅岛"
                    android:textColor="@color/black1"
                    android:textSize="@dimen/sp_16"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@+id/movie_iv"
                    android:text="@string/director_name"
                    android:textColor="@color/common_text_color"
                    android:textSize="@dimen/sp_12"/>

                <TextView
                    android:id="@+id/director_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@+id/movie_iv"
                    android:text="乔丹·沃格-罗伯茨"
                    android:textColor="@color/common_text_color"
                    android:textSize="@dimen/sp_12"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@+id/movie_iv"
                    android:text="@string/performer_name"
                    android:textColor="@color/common_text_color"
                    android:textSize="@dimen/sp_12"/>

                <TextView
                    android:id="@+id/performer_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@+id/movie_iv"
                    android:text="汤姆·希德勒斯顿"
                    android:textColor="@color/common_text_color"
                    android:textSize="@dimen/sp_12"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@+id/movie_iv"
                    android:text="@string/movie_type_name"
                    android:textColor="@color/common_text_color"
                    android:textSize="@dimen/sp_12"/>

                <TextView
                    android:id="@+id/movie_type_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@+id/movie_iv"
                    android:text="动作"
                    android:textColor="@color/common_text_color"
                    android:textSize="@dimen/sp_12"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@+id/movie_iv"
                    android:text="@string/movie_time_name"
                    android:textColor="@color/common_text_color"
                    android:textSize="@dimen/sp_12"/>

                <TextView
                    android:id="@+id/movie_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@+id/movie_iv"
                    android:text="100分钟"
                    android:textColor="@color/common_text_color"
                    android:textSize="@dimen/sp_12"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
